2009-12-18  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.1.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-12-18  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-scanner 3.0.0 release.

	* VERSION: Set to 3.0.0.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2009-12-17  Michael Wiegand <michael.wiegand@intevation.de>

	* openvassd/preferences.c (preferences_new): Added group name so the
	openvassd.conf complies with the key file specification (see
	http://freedesktop.org/Standards/desktop-entry-spec).

2009-12-09  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvassd/ntp_11.c: Cosmetics.

	* openvassd/utils.c (temp_file_name): Reformatted.

2009-12-07  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.0.rc2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-12-07  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-scanner 3.0.0-rc1 release.

	* VERSION: Set to 3.0.0.rc1.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2009-12-04  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* openvas-nvt-sync.in: Added URL of feed home page.

2009-12-03  Chandrashekhar B <bchandra@secpod.com>

	* cnvts/openvas_tcp_scanner/openvas_tcp_scanner.c,
	cnvts/synscan/synscan.c: Fixed compiler warnings.

2009-12-03  Michael Wiegand <michael.wiegand@intevation.de>

	* openvas-nvt-sync.in: Added support for upcoming synchronization
	script API.

2009-12-02  Michael Wiegand <michael.wiegand@intevation.de>

	Made logging less verbose by wrapping a number of debugging messages in
	an #ifdef DEBUG.

	* openvassd/auth.c (auth_check_user): Only log successful logins when
	DEBUG is defined.

	* openvassd/comm.c (comm_init): Only log the protocol version requested
	by the client when DEBUG is defined.
