@@ -1,3 +1,8 @@
+2010-01-12  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
+	* cnvts/synscan/synscan.c: Reformatting, added svn revision keyword
+	property.
+
 2009-12-18  Michael Wiegand <michael.wiegand@intevation.de>
 
 	Post-release version bump.
